--- a/support.html
+++ b/support.html
@@ -13,7 +13,7 @@
 
 <div class="card">
   <p><strong>Version:</strong> 1.0.1</p>
-  <p><strong>Contact:</strong> <a href="mailto:carlostechops@gmail.com">carlostechops@gmail.com</a></p>
+  <p><strong>Contact:</strong> <a href="mailto:carlos@infrahardener.com">carlos@infrahardener.com</a></p>
 </div>
 
 <h2>FAQ</h2>
